# foundry-evm-mini

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/evm/: mod.rs  utils.rs
src/evm/executor/: mod.rs
src/evm/executor/backend/: error.rs  mod.rs  snapshot.rs
src/evm/executor/fork/: backend.rs  cache.rs  mod.rs
src/evm/executor/inspector/: access_list.rs  mod.rs
src/evm/inspectors/: access_list.rs  mod.rs
src/utils/: error.rs
