[package]
name = "foundry-evm-mini"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Error handling
anyhow = "1.0.70"
eyre = "0.6"
thiserror = "1"

# Encoding/decoding
serde_json = "1"
serde = "1"

# Threading/futures
tokio = { version = "1", features = ["time", "macros"] }
parking_lot = "0.12"
futures = "0.3"
once_cell = "1"

# Logging
tracing = "0.1"

url = "2"

ethers = { version = "2.0.7", features = ["ethers-solc"] }
ethers-addressbook = "2.0.7"
ethers-core = "2.0.7"
ethers-contract = "2.0.7"
ethers-contract-abigen = "2.0.7"
ethers-providers = "2.0.7"
ethers-signers = "2.0.7"
ethers-middleware = "2.0.7"
ethers-etherscan = "2.0.7"
ethers-solc = "2.0.7"

# EVM
bytes = "1"
hashbrown = { version = "0.13", features = ["serde"] }
revm = { version = "3", default-features = false, features = [
  "std",
  "serde",
  "memory_limit",
  "optional_eip3607",
  "optional_block_gas_limit",
  "optional_no_base_fee",
] }

[patch.crates-io]
revm = { git = "https://github.com/bluealloy/revm/", rev = "6b55b9c0ab264c000e087c2f54f2d8dc24b869aa" }